# mpnn-caliby

./: README.md  codex.md  environment.yml  fast_fixed_pos_csv.py  inverse_fold.py  output.caliby_inputs.csv  output.csv  pack.py  pyproject.toml  setup_shared_env.sh
ProteinMPNN/: protein_mpnn_run.py  protein_mpnn_utils.py
caliby/: build_apptainer.sh  env_setup.sh  pyproject.toml
caliby/caliby/configs/data/preprocessing/atomworks/: build_metadata_parquet_shards.yaml  preprocess_examples.yaml
caliby/caliby/configs/eval/sampling/: generate_ensembles.yaml  score.yaml  seq_des.yaml  sidechain_pack.yaml
caliby/caliby/configs/seq_denoiser/: seq_denoiser.yaml
caliby/caliby/configs/seq_denoiser/denoiser/: atom_mpnn_denoiser.yaml
caliby/caliby/configs/seq_denoiser/denoiser/scn_diffusion_module/: scn_diffusion_module.yaml
caliby/caliby/configs/struct_pred/: struct_pred_base.yaml
caliby/caliby/data/: io_utils.py  mask_selector.py
caliby/caliby/data/datasets/: atomworks_sd_dataset.py
caliby/caliby/data/preprocessing/atomworks/: make_pdb_name_lists.py  merge_parquet_shards.py  sharding_utils.py
caliby/caliby/data/transform/: encoding.py  preprocess.py  preprocess_transforms.py  sd_featurizer.py
caliby/caliby/eval/eval_utils/: eval_metrics.py
caliby/caliby/eval/sampling/: generate_ensembles.py  score.py  seq_des.py  seq_des_ensemble.py  sidechain_pack.py
caliby/caliby/model/seq_denoiser/: lit_sd_model.py  sd_model.py
caliby/chroma/layers/: complexity.py  graph.py
caliby/examples/example_data/homooligomers/: 1TNF-assembly1.cif
caliby/examples/example_data/native_pdbs/: 8sot.cif
caliby/examples/scripts/: clean_pdbs.sh  score_ensemble.sh  seq_des_and_refold.sh  seq_des_constraints.sh  seq_des_ensemble_constraints.sh  seq_des_subset.sh  sidechain_pack.sh
caliby/examples/scripts/homooligomers/: make_homooligomer_symmetry_pos.sh  seq_des_homooligomers.sh
(+59 files in other folders)
